# machine-learning-theories

./: .gitignore  algorithm_research_synthesis.md  tooling_insights.md
rtl_analyzer/: .gitattributes  .gitignore  TRAINING_CONTEXT.md  pyproject.toml
rtl_analyzer/benchmarks/: compare_tools.py
rtl_analyzer/dataset/: dataset.csv  manifest.json  test.csv  train.csv  val.csv
rtl_analyzer/datasets/llm/: build_kaggle_dataset.py
rtl_analyzer/models/: config.json  quality_predictor.pt  quality_predictor_info.json  rtl_bug_classifier.json  security_classifier.pt  security_classifier_info.json
rtl_analyzer/notebooks/rtl_analyzer_phase3/: 00_gpu_verification.ipynb  01_dataflow_and_rtl_e002.ipynb  02_dataset_build_and_inspection.ipynb  03_ast_xgboost_baseline.ipynb  04_rtl_bug_classification.ipynb  05_build_combined_dataset.ipynb  06_security_detection.ipynb  07_quality_prediction.ipynb  08_llm_finetuning_unsloth.ipynb  08_llm_finetuning_unsloth_READY_TO_RUN.ipynb  08_llm_finetuning_unsloth_SMOKE_TEST.ipynb
rtl_analyzer/rtl_analyzer/: __init__.py  cli.py  dataflow.py  elaborator.py  engine.py  models.py
rtl_analyzer/rtl_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
rtl_analyzer/rtl_analyzer/checks/: __init__.py  blocking_in_ff.py  (+13 more)
rtl_analyzer/scripts/: build_combined_dataset.py  build_phase3_dataset.py  evaluate_phase3.py  train_ast_baseline.py
rtl_analyzer/tests/: test_checks.py  test_phase2.py  test_phase3_contracts.py  test_phase3_dataflow.py  test_phase3_dataset.py  test_phase3_docs.py  test_phase3_ml.py
(+37 files in other folders)
