[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rtl-analyzer"
version = "0.1.0"
description = "General-purpose RTL static analysis engine for Verilog/SystemVerilog. Layer 1: deterministic bug detection."
requires-python = ">=3.10"
dependencies = [
    "pyslang>=9.0",
    "rich>=13.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
ml = [
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "joblib>=1.4",
]
notebooks = [
    "jupyter>=1.1",
    "nbformat>=5.10",
    "nbclient>=0.10",
    "nbconvert>=7.16",
]
llm = [
    "transformers>=4.50",
    "datasets>=3.2",
    "peft>=0.14",
    "accelerate>=1.3",
    "bitsandbytes>=0.45",
]

[project.scripts]
rtl-check = "rtl_analyzer.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rtl_analyzer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
